components/security/cert-manager/cert-manager.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
---
